# friemeln

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag.yml
src/friemeln/: __init__.py  friemeln.py
test/: test_true.py
