[project]
name = "friemeln"
version = "0.1.0"
description = "Testing mesting"
authors = [{ name = "Luis Glaser", email = "LuisGlasr@gmail.com"}]
readme = "README.md"
classifiers = ["Private :: Do not Upload"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
select = ["B", "E", "F", "I", "T20"]
